fix: change style for scrollbar for drawer

--- a/css/tailwind.css
+++ b/css/tailwind.css
@@ -72,13 +72,13 @@ samp {
   padding-bottom: 0.15em;
   background-image: linear-gradient(
     90deg,
-    rgba(255,126,95,0.4),
-    rgba(254,180,123,0.4),
-    rgba(109,175,34,0.4),
-    rgba(134,168,231,0.4),
-    rgba(127,127,213,0.4)
+    rgba(255, 126, 95, 0.4),
+    rgba(254, 180, 123, 0.4),
+    rgba(109, 175, 34, 0.4),
+    rgba(134, 168, 231, 0.4),
+    rgba(127, 127, 213, 0.4)
   );
-  background-repeat: no-repeat; 
+  background-repeat: no-repeat;
   background-position: 0 100%;
   background-size: 0% 0.4em;
   box-decoration-break: clone;
@@ -100,4 +100,21 @@ samp {
   background-size: 0% 0.4em;
   background-position: 0% 100%;
 }
- 
+
+.scrollbar-rounded::-webkit-scrollbar {
+  width: 8px;
+}
+
+.scrollbar-rounded::-webkit-scrollbar-track {
+  background: #f1f1f1;
+  border-radius: 4px;
+}
+
+.scrollbar-rounded::-webkit-scrollbar-thumb {
+  background: #888;
+  border-radius: 4px;
+}
+
+.scrollbar-rounded::-webkit-scrollbar-thumb:hover {
+  background: #555;
+}
